--- a/views/template.html
+++ b/views/template.html
@@ -10,9 +10,15 @@
 <body id='body'>
     <nav class="navbar main-nav is-dark" role="navigation" aria-label="main navigation">
         <div class="navbar-start">
-        <a class="navbar-item" href='/'>Home</a>
+            <a class="navbar-item" href='/'>Home</a>
+        </div>
+        <div class="navbar-end">
+                <a class="navbar-item" href="/books/">Books</a>
         </div>
         ${!!is_logged_in ? `
+            <div class="navbar-end">
+                <a class="navbar-item" href="/users">Your Reviews</a>
+            </div>
             <div class="navbar-end">
                 <a class="navbar-item" href="/users/logout">Logout</a>
             </div>
@@ -22,7 +28,7 @@
             </div>
         `}
     </nav>
-    <h1 class='title'>${title}</h1>
+    <h1 class='title is-1'>${title}</h1>
     <main class='container'>${partial}</main>
 </body>
 </html>
